--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,20 @@
 <resources>
-    <string name="app_name">MiApicacion</string>
-    <string name="txtview">Registrate</string>
-    <string name="txtviw2">¡Crea tu cuenta y empieza a troquear y publicar lo que quieras vender!</string>
-    <string name="boton_facebook">Registrarse con facebook</string>
-    <string name="registrarse_con_google">Registrarse s</string>
-    <string name="registrarse_con_Apple">Registrarse con Apple ID</string>
-    <string name="txtconfirmar">Confirma tu registro</string>
-    <string name="txtconfirm">¡Termina de registrarte y disfruta de vender!</string>
-    <string name="validar_c_digo">Confirmar Registro</string>
+    <string name="app_name" translatable="false">MiApicacion</string>
+    <string name="txtview" translatable="false">Registrate</string>
+    <string name="txtviw2" translatable="false">¡Crea tu cuenta y empieza a troquear y publicar lo que quieras vender!</string>
+    <string name="boton_facebook" translatable="false">Registrarse con facebook</string>
+    <string name="registrarse_con_google" translatable="false">Registrarse </string>
+    <string name="registrarse_con_Apple" translatable="false">Registrarse con Apple ID</string>
+    <string name="txtconfirmar" translatable="false">Confirma tu registro</string>
+    <string name="txtconfirm" translatable="false">¡Termina de registrarte y disfruta de vender!</string>
+    <string name="validar_c_digo" translatable="false">Confirmar Registro</string>
+    <string name="tv_nombre">Nombre completo</string>
+    <string name="edt_ingrnom">Ingresá tu nombre</string>
+    <string name="tv_email">Correo electrónico</string>
+    <string name="edt_ingreemail">Ingresá tu correo</string>
+    <string name="tv_contraseña">Contraseña</string>
+    <string name="edt_ingreContra">Ingresá tu contraseña</string>
+    <string name="bttn_rergistrarGoogle">Registrarse con Google</string>
+    <string name="bttn_RegistarApple">Registrarse con Apple ID</string>
+    <string name="bttn_sig">Siguiente</string>
 </resources>
